Fix some button link

--- a/get/opkona.html
+++ b/get/opkona.html
@@ -125,7 +125,8 @@
                         </path>
                     </svg>
                 </div>
-                <div id="circle" class="menuli" onclick="javascript:window.location.href='https://c.varia.org.cn'">CIRCLE
+                <div id="circle" class="menuli" onclick="javascript:window.location.href='https://c.varia.org.cn'">
+                    CIRCLE
                     <svg id="arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk"
                         width="18" height="18" viewBox="-1 -1 20 20" fill="none">
                         <path
@@ -273,8 +274,8 @@
                     </svg>
                     <div flex>
                         <div>
-                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="22"
-                                viewBox="0 0 276.6270751953125 32" fill="none">
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                                height="22" viewBox="0 0 276.6270751953125 32" fill="none">
                                 <path class="text"
                                     d="M202.877 30.7369C204.858 31.5349 207.031 31.9359 209.397 31.9359C211.762 31.9359 213.935 31.5349 215.916 30.7369C217.897 29.9389 219.631 28.8287 221.113 27.4037C222.595 25.9786 223.735 24.2893 224.533 22.3371C225.331 20.3848 225.729 18.2531 225.729 15.9446C225.729 13.636 225.331 11.5135 224.533 9.57543C223.735 7.6374 222.595 5.95721 221.113 4.53219C219.631 3.10718 217.897 1.99367 215.916 1.19566C213.935 0.397651 211.762 0 209.397 0C207.031 0 204.858 0.397651 202.877 1.19566C200.896 1.99367 199.166 3.10718 197.684 4.53219C196.202 5.95721 195.062 7.6374 194.264 9.57543C193.466 11.5135 193.068 13.636 193.068 15.9446C193.068 18.2531 193.466 20.3848 194.264 22.3371C195.062 24.2893 196.202 25.9786 197.684 27.4037C199.166 28.8287 200.896 29.9389 202.877 30.7369ZM261.863 13.0489L261.863 31.2612L255.898 31.2612L255.898 13.797C255.898 10.885 255.229 8.69527 253.894 7.22749C252.548 5.74709 250.743 5.00647 248.477 5.00647C246.849 5.00647 245.318 5.42322 243.888 6.25892C242.447 7.10047 241.289 8.41981 240.414 10.2133C239.549 11.9855 239.118 14.2615 239.118 17.04L239.118 31.2612L233.157 31.2612L233.157 0.661288L239.055 0.661288L239.055 6.69312C239.437 5.69884 240.359 4.28285 241.673 3.17288C242.988 2.06292 244.232 1.2227 245.821 0.761501C247.382 0.308608 248.644 0.166994 250.28 0.166994C253.873 0.166994 256.7 1.25531 258.76 3.4334C260.829 5.62032 261.863 8.82563 261.863 13.0489ZM43.5553 0.667975L49.4101 0.667975L61.4236 31.2345L55.3517 31.2345L46.5679 7.31098L37.784 31.2345L31.4983 31.2345L43.5553 0.667975ZM126.979 0.667975L132.837 0.667975L144.85 31.2345L138.778 31.2345L129.995 7.31098L121.207 31.2345L114.925 31.2345L126.979 0.667975ZM12.0569 31.2345L17.9117 31.2345L30.0923 0.667975L23.8534 0.667975L15.0695 24.5915L6.28564 0.667975L0 0.667975L12.0569 31.2345ZM68.8715 31.2512L74.6428 31.2512L74.6428 19.3646L80.6312 19.3646L87.655 31.2512L94.3748 31.2512L86.8601 18.7734C87.3824 18.612 87.8811 18.4164 88.3564 18.189C89.9952 17.4052 91.2777 16.3099 92.2039 14.8992C93.13 13.4884 93.7603 11.8554 93.7603 10.0029C93.7603 8.15039 93.13 6.52655 92.2039 5.13005C91.2777 3.73354 89.9952 2.64407 88.3564 1.86031C86.7175 1.07655 84.7997 0.684674 82.6051 0.684674L68.8715 0.684674L68.8715 31.2512ZM101.98 31.2512L107.751 31.2512L107.751 0.684674L101.98 0.684674L101.98 31.2512ZM162.759 5.60097L172.334 5.60097L172.334 0.68469L147.409 0.68469L147.409 5.60097L156.987 5.60097L156.987 31.2512L162.759 31.2512L162.759 5.60097ZM179.618 31.2512L185.39 31.2512L185.39 0.68469L179.618 0.68469L179.618 31.2512ZM214.741 25.4365C213.201 26.377 211.42 26.8459 209.397 26.8459C207.402 26.8459 205.63 26.377 204.076 25.4365C202.523 24.496 201.312 23.2077 200.443 21.5689C199.573 19.9301 199.137 18.0536 199.137 15.9446C199.137 13.8355 199.573 11.9714 200.443 10.3469C201.312 8.72241 202.523 7.43989 204.076 6.49938C205.63 5.55887 207.402 5.08662 209.397 5.08662C211.42 5.08662 213.201 5.55887 214.741 6.49938C216.279 7.43989 217.485 8.72241 218.354 10.3469C219.224 11.9714 219.657 13.8355 219.657 15.9446C219.657 18.0536 219.224 19.9301 218.354 21.5689C217.485 23.2077 216.279 24.496 214.741 25.4365ZM74.6428 14.4917L82.6051 14.4917C84.2012 14.4917 85.457 14.094 86.3691 13.296C87.2812 12.498 87.7351 11.3994 87.7351 10.0029C87.7351 8.63491 87.2812 7.55122 86.3691 6.75322C85.457 5.95523 84.2012 5.55755 82.6051 5.55755L74.6428 5.55755L74.6428 14.4917Z"
                                     fill-rule="evenodd">
@@ -283,7 +284,8 @@
                                     d="M276.627 28.441C276.627 29.924 275.564 30.962 275.564 30.962C274.502 32 272.969 32 272.969 32C271.486 32 270.424 30.962 270.424 30.962C269.361 29.924 269.361 28.441 269.361 28.441C269.361 26.9581 270.424 25.9201 270.424 25.9201C271.486 24.8821 272.969 24.8821 272.969 24.8821C274.502 24.8821 275.564 25.9201 275.564 25.9201C276.627 26.9581 276.627 28.441 276.627 28.441Z">
                                 </path>
                             </svg>
-                            <p footer>Variation UI is a distinctive system of interface design, functional design, and performance
+                            <p footer>Variation UI is a distinctive system of interface design, functional design, and
+                                performance
                                 features
                                 that showcases an outstanding user interface, excellent functional design, and seamless
                                 fluidity
@@ -346,20 +348,18 @@
         const lastChangeLog = obj.changelog_last.replace(/<br>/g, '\n')
         document.querySelector(".changelog").innerText = lastChangeLog;
 
-        // changelogBox.textContent = obj.changelog_last;
+        maintainer.addEventListener('click', () => {
+            window.open(obj.github_url, '_blank');
+        });
+
+        copyMD5.addEventListener('click', () => {
+            navigator.clipboard.writeText(obj.img_md5);
+        });
+
+        imgBtn.addEventListener('click', () => {
+            window.open(obj.img_link, '_blank');
+        });
     }
-
-    maintainer.addEventListener('click', () => {
-        window.open(obj.github_url, '_blank');
-    });
-
-    copyMD5.addEventListener('click', () => {
-        navigator.clipboard.writeText(obj.img_md5);
-    });
-
-    imgBtn.addEventListener('click', () => {
-        window.open(obj.img_link, '_blank');
-    });
 
     getJson();
 </script>
