Add more header effect

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html lang="en">
+<!DOCTYPE html>
+<html>
 
 <head>
     <meta charset="UTF-8">
@@ -102,7 +103,8 @@
                         </path>
                     </svg>
                 </div>
-                <div id="circle" class="menuli" onclick="javascript:window.location.href='https://c.varia.org.cn'">CIRCLE
+                <div id="circle" class="menuli" onclick="javascript:window.location.href='https://c.varia.org.cn'">
+                    CIRCLE
                     <svg id="arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk"
                         width="18" height="18" viewBox="-1 -1 20 20" fill="none">
                         <path
@@ -215,7 +217,8 @@
                                 d="M276.627 28.441C276.627 29.924 275.564 30.962 275.564 30.962C274.502 32 272.969 32 272.969 32C271.486 32 270.424 30.962 270.424 30.962C269.361 29.924 269.361 28.441 269.361 28.441C269.361 26.9581 270.424 25.9201 270.424 25.9201C271.486 24.8821 272.969 24.8821 272.969 24.8821C274.502 24.8821 275.564 25.9201 275.564 25.9201C276.627 26.9581 276.627 28.441 276.627 28.441Z">
                             </path>
                         </svg>
-                        <p footer>Variation UI is a distinctive system of interface design, functional design, and performance
+                        <p footer>Variation UI is a distinctive system of interface design, functional design, and
+                            performance
                             features
                             that showcases an outstanding user interface, excellent functional design, and seamless
                             fluidity
@@ -227,5 +230,7 @@
         </footer>
     </div>
 </body>
+
+<script src="./script/onload.js"></script>
 
 </html>
