--- a/legal.html
+++ b/legal.html
@@ -1,4 +1,5 @@
-<html lang="en">
+<!DOCTYPE html>
+<html>
 
 <head>
     <meta charset="UTF-8">
@@ -322,3 +323,7 @@ We will update this privacy policy as needed so that it is current, accurate, an
         </footer>
     </div>
 </body>
+
+<script src="./script/onload.js"></script>
+
+</html>
