--- a/get.html
+++ b/get.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="UTF-8" />
@@ -178,5 +178,7 @@
         </div>
         <script src="./script/app.js"></script>
 </body>
+
+<script src="./script/onload.js"></script>
 
 </html>
