--- a/get/opkona.html
+++ b/get/opkona.html
@@ -27,7 +27,7 @@
     }
 </script>
 
-<body>
+<body style="overflow-y: hidden;">
     <style>
         #get {
             border-bottom: solid 1px var(--primary-color);
@@ -151,8 +151,13 @@
                 </button>
                 <h2 class="codename">Opkona</h2>
             </div>
+            <div class="loader" style="opacity: 1;">
+                <svg class="circular" viewBox="25 25 50 50">
+                    <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="5" stroke-miterlimit="0" />
+                </svg>
+            </div>
             <div class="content" id="deviceinfo">
-                <img class="devicePhoto" src="../sources/opkona.png">
+                <img class="devicePhoto" onload="successload()">
                 <span class="infoContent">
                     <p info class="modelText">Model</p>
                     <h2 class="model">OnePlus 8, OnePlus 8T, OnePlus 8 Pro, OnePlus 9R</h2>
@@ -194,23 +199,23 @@
                         </span>
 
                         <span class="statusInfoBox">
-                            <img id="statusIcon" src="../sources/get/timer.svg">
+                            <img id="statusIcon" class="timerIcon" src="../sources/get/timer.svg">
                             <span class="statusInfo">
                                 <h3 id="statusText" class="updateTime"></h3>
-                                <p info>Release</p>
+                                <p info class="releaseText">Release</p>
                             </span>
                         </span>
                     </span>
                     <span class="infoContentBox">
                         <span class="statusInfoBox">
-                            <img id="statusIcon" src="../sources/get/buildtime.svg">
+                            <img id="statusIcon" class="buildtimeIcon" src="../sources/get/buildtime.svg">
                             <span class="statusInfo">
                                 <h3 id="statusText" class="buildTime"></h3>
-                                <p info>Build Time</p>
+                                <p info class="buildTimeText">Build Time</p>
                             </span>
                         </span>
                         <span class="statusInfoBox">
-                            <img id="statusIcon" src="../sources/get/md5.svg">
+                            <img id="statusIcon" class="mdIcon" src="../sources/get/md5.svg">
                             <span class="statusInfo">
                                 <div class="md5Content">
                                     <h3 class="md5"></h3>
@@ -224,7 +229,7 @@
                                         </svg>
                                     </button>
                                 </div>
-                                <p info>MD5</p>
+                                <p info class="mdText">MD5</p>
                             </span>
                         </span>
 
@@ -261,7 +266,7 @@
                     <span class="changelog"></span>
                 </span>
             </div>
-            <footer class="content">
+            <footer class="content" style="opacity: 0;">
                 <div body>
                     <svg class="md-hr" aria-hidden="true" width="100%" height="8" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
@@ -364,6 +369,17 @@
     }
 
     getJson();
+
+    function successload() {
+        const contentBox = document.querySelector("#deviceinfo");
+        const loader = document.querySelector(".loader");
+        const footer = document.querySelector("footer");
+        const body = document.querySelector("body");
+        contentBox.style.opacity = "1";
+        loader.style.opacity = "0";
+        footer.style.opacity = "1";
+        body.style.overflow = "auto";
+    }
 </script>
 
 </html>
