--- a/get/opkona.html
+++ b/get/opkona.html
@@ -38,30 +38,16 @@
             background-color: var(--main-background);
         }
 
-        header {
-            background-color: var(--menu-main-background);
-        }
-
         .md_halvingline {
-            opacity: 0;
+            opacity: 1;
         }
     </style>
     <div id="content">
         <header>
             <input type="checkbox" id="toggler">
-
-            <label for="toggler">
-                <svg class="menubutton" xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk"
-                    width="18" height="18" viewBox="1.5 1.5 15 15" fill="none">
-                    <path class="top"
-                        d="M3.32501 5.54999L14.675 5.54999C14.8131 5.54999 14.925 5.66192 14.925 5.79999L14.925 6.74999C14.925 6.88806 14.8131 6.99999 14.675 6.99999L3.32501 6.99999C3.18694 6.99999 3.07501 6.88806 3.07501 6.74999L3.07501 5.79999C3.07501 5.66192 3.18694 5.54999 3.32501 5.54999Z"
-                        fill="#FFFFFF">
-                    </path>
-                    <path class="bottom"
-                        d="M3.32501 11L14.675 11C14.8131 11 14.925 11.1119 14.925 11.25L14.925 12.2C14.925 12.3381 14.8131 12.45 14.675 12.45L3.32501 12.45C3.18694 12.45 3.07501 12.3381 3.07501 12.2L3.07501 11.25C3.07501 11.1119 3.18694 11 3.32501 11Z"
-                        fill="#FFFFFF">
-                    </path>
-                </svg>
+            <label class="hamberger-btn" for="toggler">
+                <span :nth-child(1)></span>
+                <span :nth-child(2)></span>
             </label>
             <div id="logo" onclick="javascript:window.location.href='../'">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xdivnk="http://www.w3.org/1999/xdivnk" width="18"
@@ -381,5 +367,7 @@
         body.style.overflow = "auto";
     }
 </script>
+
+<script src="../script/onload.js"></script>
 
 </html>
